--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sumat",
+	"name": "SuMMAT",
 	"author": "Mickael “LunaSea“ van der Beek <mickael@sagacify.com>",
 	"scripts": {
 		"start": "PORT=8080 NODE_ENV=production node --harmony_proxies server.js"
