unstable version. refactoring and logging added. still missing dual database with storage method replacement. removed winston because it didnt add anything besides limitations.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
 	"dependencies": {
 		"express": "latest",
 		"mongoose": "latest",
-		"winston": "latest",
-		"winston-mongodb": "latest"
+		"helmet": "latest"
 	}
 }
